<resources>
    <!--Strings do App-->
    <string name="app_name">Project 9</string>
    <string name="separation_bar">Separation Bar</string>

    <!--Strings do Inventário-->
    <string name="empty_list_no_products">Sem Produtos para Venda \n\n Acesse o Menu Superior para Adicionar novos Produtos</string>
    <string name="empty_list_image">Empty List Image</string>
    <string name="no_more_products_toast">Sem mais %1$s para Vender</string>
    <string name="sold_one_more_toast">Mais um %1$s Vendido</string>

    <!--Strings do Sumário Layout-->
    <string name="summary_title">Sumário</string>
    <string name="summary_total_cost">Custo Total</string>
    <string name="summary_total_value">Valor Total de Venda</string>
    <string name="summary_product_types">Tipos de Produtos</string>
    <string name="summary_total_units">Total de unidades</string>

    <!--Strings do Edit Layout-->
    <string name="edit_product_name">Nome do Produto</string>
    <string name="edit_product_code">Código do Produto</string>
    <string name="edit_buy_value">Valor de Compra</string>
    <string name="money_value_hints">0,00</string>
    <string name="edit_sell_value">Valor de Venda</string>
    <string name="edit_stock_total">Total em Estoque</string>
    <string name="edit_image">Imagem</string>
    <string name="edit_image_view">Imagem do Produto</string>
    <string name="edit_select_image_button">Selecionar Imagem</string>
    <string name="edit_delete_button">Deletar</string>
    <string name="edit_stock_hint">0</string>
    <string name="edit_margin">Edit Margin Dummy Image</string>
    <string name="edit_plus_button">+</string>
    <string name="edit_minus_button">-</string>
    <string name="rotate_image_button">Botão de girar Imagen</string>
    <string name="change_stock_control_label">Modificar Estoque</string>

    <!--Strings do Layoout da Lista-->
    <string name="list_product">PRODUTO</string>
    <string name="list_buy">Compra</string>
    <string name="list_sell">Venda</string>
    <string name="list_product_image">List Product Image</string>
    <string name="list_stock">Estoque</string>
    <string name="list_sell_button">Vender +1</string>

    <!--Strings do Menu-->
    <string name="menu_dummy_inventory">Inventário de Exemplo</string>
    <string name="menu_empty_inventory">Esvaziar Inventário</string>
    <string name="menu_summary">Sumário</string>
    <string name="menu_add_product">Novo Produto</string>

    <!--Strings do Edit Java-->
    <string name="edit_new_product_title">Adicionar Produto</string>
    <string name="edit_edit_product_title">Editar %1$s</string>
    <string name="edit_delete_error_message">Não Foi Possível Excluir %1$s</string>
    <string name="edit_delete_success_message">%1$s Excluido com Sucesso</string>
    <string name="edit_insert_error_message">Não Foi Possível adicionar %1$s</string>
    <string name="edit_insert_success_message">%1$s Adicionado com Sucesso</string>
    <string name="edit_update_error_message">Não Foi Possível Atualizar %1$s</string>
    <string name="edit_update_success_message">%1$s Atualizado com Sucesso</string>
    <string name="value_larger_than_stock_toast">%1$d é maior que o estoque Atual</string>
    <string name="no_more_stock_toast">Sem mais %1$s no estoque</string>
    <string name="add_more_stock_toast">Adicionado %1$d %2$s ao Estoque</string>
    <string name="remove_more_stock_toast">Removido %1$d %2$s do Estoque</string>
    <string name="new_order_button">Nova encomenda deste Produto</string>
    <string name="email_order_subject">Ordem de Pedido de %1$s</string>
    <string name="email_order_address">%1$s@submitorder.com</string>
    <string name="email_order_content">%1$s \n Solicito uma ordem de entrega de %2$d %3$s do %4$s. \n\n Obrigado.</string>
    <string name="edit_intent_send_email">Enviar Email</string>
    <string name="image_intent_type">image/*</string>
    <string name="select_picture_intent">Select Picture</string>
    <string name="intent_data">data</string>
    <string name="greeting_day">Bom Dia</string>
    <string name="greeting_afternoon">Boa Tarde</string>
    <string name="greeting_night">Boa Noite</string>
    <string name="string_format_unit">unidade</string>
    <string name="string_format_units">unidades</string>
    <string name="intent_email_type">text/plain</string>
    <string name="intent_email_data">mailto:</string>

    <!--Strings dos Dialogs-->
    <string name="edit_dialog_delete_message">Confirma Exclusão de %1$s</string>
    <string name="edit_dialog_delete">Apagar</string>
    <string name="edit_dialog_cancel">Cancelar</string>
    <string name="edit_changes_dialog_message">Descartar Mudanças e Sair do Editor</string>
    <string name="edit_dialog_discard">Descartar</string>
    <string name="edit_dialog_keep">Continuar a Edição</string>
    <string name="edit_fill_dialog_message">Nome, Código, Preço de Compra e Venda e Estoque Requeridos</string>
    <string name="edit_exist_dialog_message">Nome ou Código já Cadastrados</string>
    <string name="edit_not_use_image">Não foi Possível Utilizar essa Imagem!</string>
    <string name="edit_image_selection_message">Deseja escolher uma foto da Galeria ou tirar uma nova foto?</string>
    <string name="edit_image_selection_gallery">Galeria</string>
    <string name="edit_image_selection_camera">Nova Foto</string>
    <string name="edit_order_dialog_message">Solicitar %1$d %2$s de %3$s?</string>
    <string name="edit_dialog_confirm">Confirmar</string>

</resources>
