<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.project9.InventoryActivity">
    <item
        android:id="@+id/add_sample_inventory"
        android:title="@string/menu_dummy_inventory"
        app:showAsAction="never" />

    <item
        android:id="@+id/empty_inventory"
        android:title="@string/menu_empty_inventory"
        app:showAsAction="never" />

    <item
        android:id="@+id/inventory_summary"
        android:title="@string/menu_summary"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_new_product"
        android:title="@string/menu_add_product"
        app:showAsAction="never" />
</menu>
