<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.project9.EditActivity"
    tools:showIn="@layout/activity_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- View "Dummy" para Prevenir o teclado de abrir junto com a atividade -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <TextView
            style="@style/SummaryLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_product_name" />

        <ImageView
            android:contentDescription="@string/separation_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <EditText
            android:inputType="text"
            android:id="@+id/edit_name"
            style="@style/SummaryValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_name"
            android:textAlignment="textEnd" />

        <TextView
            style="@style/SummaryLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_product_code" />

        <ImageView
            android:contentDescription="@string/separation_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <EditText
            android:inputType="text"
            android:id="@+id/edit_code"
            style="@style/SummaryValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_code"
            android:textAlignment="textEnd" />

        <TextView
            style="@style/SummaryLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_buy_value" />

        <ImageView
            android:contentDescription="@string/separation_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/edit_buy"
            style="@style/SummaryValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/money_value_hints"
            android:textAlignment="textEnd"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/SummaryLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_sell_value" />

        <ImageView
            android:contentDescription="@string/separation_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/edit_sell"
            style="@style/SummaryValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/money_value_hints"
            android:textAlignment="textEnd" />

        <TextView
            style="@style/SummaryLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_stock_total" />

        <ImageView
            android:contentDescription="@string/separation_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <EditText
            android:inputType="number"
            android:id="@+id/edit_stock"
            style="@style/SummaryValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_stock_hint"
            android:textAlignment="textEnd" />

        <TextView
            style="@style/SummaryLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_image" />

        <ImageView
            android:contentDescription="@string/separation_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:contentDescription="@string/edit_image_view"
            android:id="@+id/edit_Image"
            style="@style/SummaryValues"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/edit_image_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/round_button"
            android:padding="6dp"
            android:text="@string/edit_select_image_button"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white" />

        <Button
            android:visibility="gone"
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/delete_round_button"
            android:padding="6dp"
            android:text="@string/edit_delete_button"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <!-- View "Dummy" para fazer as vezes de uma margin
        devido a visibilidade ou não do deleteButton -->
        <ImageView
            android:contentDescription="@string/edit_margin"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:visibility="invisible"/>

    </LinearLayout>

</ScrollView>
